add delivery info to home page

--- a/CupcakeShopClient/src/index.css
+++ b/CupcakeShopClient/src/index.css
@@ -34,6 +34,7 @@
     --color-dark: #705A66;
     --color-light: #F5F7F8;
     --color-pale-yellow: #F5EEE0;
+    --color-beige: #DDD5C6;
 
     --font-family-light: Montserrat-Light;
     --font-family-bold: Montserrat-Bold;
