add pagination to catalog page

--- a/CupcakeShopClient/src/index.css
+++ b/CupcakeShopClient/src/index.css
@@ -35,6 +35,7 @@
     --color-light: #F5F7F8;
     --color-pale-yellow: #F5EEE0;
     --color-beige: #DDD5C6;
+    --color-unselected-page:#CAB2BF;
 
     --font-family-light: Montserrat-Light;
     --font-family-bold: Montserrat-Bold;
