--- a/CupcakeShopClient/src/index.css
+++ b/CupcakeShopClient/src/index.css
@@ -36,6 +36,7 @@
     --color-pale-yellow: #F5EEE0;
     --color-beige: #DDD5C6;
     --color-unselected-page:#CAB2BF;
+    --color-black: #252525;
 
     --font-family-light: Montserrat-Light;
     --font-family-bold: Montserrat-Bold;
