add matkup to order page

--- a/CupcakeShopClient/src/index.css
+++ b/CupcakeShopClient/src/index.css
@@ -28,8 +28,8 @@
     --text-size-extra-large: 42px;
     --text-size-huge-mobil: 80px;
     --text-size-huge: 100px;
-    --text-size-extra-huge-mobil-mobil: 120px;
-    --text-size-extra-huge-mobil: 226.45px;
+    --text-size-extra-huge-mobil: 120px;
+    --text-size-extra-huge: 226.45px;
 
     --color-bg: #F5F5F5;
     --color-dark: #705A66;
